# categorizer

./: .gitignore  README.md  main.py  pyproject.toml
datasets/: ads.txt
trainer/: trainer_for_is_ad.py
