[project]
name = "categorizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fasttext-wheel>=0.9.2",
    "llama-cpp-python>=0.3.32",
    "numpy<2",
]

[[tool.uv.index]]
name = "llama-cpp-vulkan"
url = "https://abetlen.github.io/llama-cpp-python/whl/vulkan"
explicit = true

[tool.uv.sources]
llama-cpp-python = { index = "llama-cpp-vulkan" }